base/api-email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-worker-email
  namespace: penguincrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-worker-email
  template:
    metadata:
      labels:
        app: api-worker-email
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: worker
          image: ghcr.io/saigear99/penguincrm-api:latest
          command: ["node", "job_email.js"]
          
          # Health Check ยิงไปที่ Port 3001
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
