base/api-pjid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-worker-pjid
  namespace: penguincrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-worker-pjid
  template:
    metadata:
      labels:
        app: api-worker-pjid
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: worker
          image: ghcr.io/saigear99/penguincrm-api:latest
          command: ["node", "job_pjid.js"]

          # Health Check ยิงไปที่ Port 3002
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
