base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: penguincrm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/saigear99/penguincrm-frontend:latest
          ports:
            - containerPort: 6001
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: penguincrm
spec:
  type: NodePort
  ports:
    - port: 6001
      targetPort: 6001
      nodePort: 30001
  selector:
    app: frontend
