base/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python
  namespace: penguincrm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "5000"
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: python
          image: ghcr.io/saigear99/penguincrm-python:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "2.5Gi"
              cpu: "2000m"
---

apiVersion: v1
kind: Service
metadata:
  name: python
  namespace: penguincrm
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30002
  selector:
    app: python
