base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penguincrm-ingress
  namespace: penguincrm
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    traefik.ingress.kubernetes.io/router.tls.options: penguincrm-securetls@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/proxy
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 6001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 6001
